Adição de validação por email no cadastro Criação de variaveis de ambiente dinamicas

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ MYSQL_DATABASE='database_name'
 MYSQL_USER='root'
 MYSQL_PASSWORD='password'
 MYSQL_HOST='database'
+MYSQL_PORT=3306
+ADM_EMAIL='suporte@easyschedule.com'
+URL_BASE='http://localhost:5000/'
