--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,8 @@
     "require": {
         "php": "^8.0",
         "ext-pdo": "*",
-        "ext-pdo_mysql": "*"
+        "ext-pdo_mysql": "*",
+        "vlucas/phpdotenv": "^5.6",
+        "phpmailer/phpmailer": "6.9.1"
     }
 }
